qa: fix SonarLint reported code smells